--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">MemoruTest1</string>
+
+    <!-- numbers -->
+    <integer name="text_field_lines">7</integer>
+
+    <!-- paddings/ margins -->
+    <dimen name="spacing_small">5dp</dimen>
+    <dimen name="spacing_medium">10dp</dimen>
+    <dimen name="spacing_large">20dp</dimen>
+
+
 </resources>
